# Installs sample $(sysconfdir)/proctab.conf file.
#
# To install in 
#   /etc/proctab.conf 
# use 
#   ./configure --sysconfdir=/etc
#
# By default autotools installs to /usr/local/etc

confdir = $(sysconfdir)
conf_DATA=proctab.conf

# not sure why this is needed, but it is for make dist to produce a buildable result
EXTRA_DIST = proctab.conf
